0.02
 - Add modules to SEE ALSO section in doc.
 - Fix dependency for Curses::UI::Grid (Thanks shalk).
 - Update Module::Install to 1.16 version.

0.01 2015-01-21T07:47:27+01:00
 - First version