@@ -1,5 +1,7 @@
 Changes
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -14,8 +16,8 @@ MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
-t/Task-Curses-UI/00-use.t
-t/Task-Curses-UI/01-version.t
-t/Task-Curses-UI/02-pod_coverage.t
-t/Task-Curses-UI/03-pod.t
+t/Task-Curses-UI/01-use.t
+t/Task-Curses-UI/02-version.t
 UI.pm
+xt/Task-Curses-UI/01-pod_coverage.t
+xt/Task-Curses-UI/02-pod.t
